force-app/main/default/objects/CARE_APP_Staging__c/CARE_APP_Staging__c.object-meta.xml
<CustomObject>
    <description>CARE staging header for enrollment, pev from various interfaces</description>
    <label>CARE APP Staging</label>
    <nameField>
        <displayFormat>ES{0000000000}</displayFormat>
        <label>NAME (Sequence No)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE APP Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>