force-app/main/default/objects/CARE_APP_Staging__c/fields/ACCT_ID__c.field-meta.xml
<CustomField>
    <fullName>ACCT_ID__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>ACCT ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>