force-app/main/default/objects/CARE_APP_Staging__c/fields/ALT_PHONE__c.field-meta.xml
<CustomField>
    <fullName>ALT_PHONE__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>ALT PHONE</label>
    <length>24</length>
    <type>Text</type>
</CustomField>