force-app/main/default/objects/CARE_APP_Staging__c/fields/ALT_PHONE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ALT_PHONE_TYPE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ALT PHONE TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>