force-app/main/default/objects/CARE_APP_Staging__c/fields/ANNUAL_INCOME__c.field-meta.xml
<CustomField>
    <fullName>ANNUAL_INCOME__c</fullName>
    <label>ANNUAL INCOME</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>