force-app/main/default/objects/CARE_APP_Staging__c/fields/APPLICANT_NAME__c.field-meta.xml
<CustomField>
    <fullName>APPLICANT_NAME__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>APPLICANT NAME</label>
    <length>64</length>
    <type>Text</type>
</CustomField>