force-app/main/default/objects/CARE_APP_Staging__c/fields/APPLICATION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_TYPE__c</fullName>
    <label>APPLICATION TYPE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RESIDENTIAL</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>