force-app/main/default/objects/CARE_APP_Staging__c/fields/BATCH_DETAIL_NO__c.field-meta.xml
<CustomField>
    <fullName>BATCH_DETAIL_NO__c</fullName>
    <externalId>true</externalId>
    <label>BATCH DETAIL NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>