force-app/main/default/objects/CARE_APP_Staging__c/fields/BATCH_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BATCH_TYPE__c</fullName>
    <defaultValue>&quot;OTHER&quot;</defaultValue>
    <label>BATCH TYPE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEV</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>