force-app/main/default/objects/CARE_APP_Staging__c/fields/Bulk_Upload_History__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Upload_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Upload History</label>
    <referenceTo>EI_Bulk_Upload_History__c</referenceTo>
    <relationshipLabel>CARE APP Staging</relationshipLabel>
    <relationshipName>CARE_APP_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>