force-app/main/default/objects/CARE_APP_Staging__c/fields/BUREAU_INDIAN_AFFAIRS__c.field-meta.xml
<CustomField>
    <fullName>BUREAU_INDIAN_AFFAIRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BUREAU INDIAN AFFAIRS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>