force-app/main/default/objects/CARE_APP_Staging__c/fields/CALFRESH_SNAP__c.field-meta.xml
<CustomField>
    <fullName>CALFRESH_SNAP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CALFRESH SNAP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>