force-app/main/default/objects/CARE_APP_Staging__c/fields/CALWORKS_TANF__c.field-meta.xml
<CustomField>
    <fullName>CALWORKS_TANF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CALWORKS TANF</label>
    <length>1</length>
    <type>Text</type>
</CustomField>