force-app/main/default/objects/CARE_APP_Staging__c/fields/CARE_Application__c.field-meta.xml
<CustomField>
    <fullName>CARE_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE Application</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE APP Staging</relationshipLabel>
    <relationshipName>CARE_APP_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>