force-app/main/default/objects/CARE_APP_Staging__c/fields/CASH_OTHER_INCOME__c.field-meta.xml
<CustomField>
    <fullName>CASH_OTHER_INCOME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CASH OTHER INCOME</label>
    <length>1</length>
    <type>Text</type>
</CustomField>