force-app/main/default/objects/CARE_APP_Staging__c/fields/CCB_CC_DATE__c.field-meta.xml
<CustomField>
    <fullName>CCB_CC_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB CC DATE</label>
    <type>Date</type>
</CustomField>