force-app/main/default/objects/CARE_APP_Staging__c/fields/COC_CODE__c.field-meta.xml
<CustomField>
    <fullName>COC_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COC CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>