force-app/main/default/objects/CARE_APP_Staging__c/fields/COC_Status__c.field-meta.xml
<CustomField>
    <fullName>COC_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COC Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>