force-app/main/default/objects/CARE_APP_Staging__c/fields/CONTACTCODE__c.field-meta.xml
<CustomField>
    <fullName>CONTACTCODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CONTACTCODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>