force-app/main/default/objects/CARE_APP_Staging__c/fields/DETAIL_STATUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>DETAIL_STATUS_CODE__c</fullName>
    <label>DETAIL STATUS CODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Batched</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Filtered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>