force-app/main/default/objects/CARE_APP_Staging__c/fields/DETAIL_STATUS_DATE__c.field-meta.xml
<CustomField>
    <fullName>DETAIL_STATUS_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DETAIL STATUS DATE</label>
    <type>Date</type>
</CustomField>