force-app/main/default/objects/CARE_APP_Staging__c/fields/E_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>E_START_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>E START DATE</label>
    <type>Date</type>
</CustomField>