force-app/main/default/objects/CARE_APP_Staging__c/fields/ELEC_SA_ID__c.field-meta.xml
<CustomField>
    <fullName>ELEC_SA_ID__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>ELEC SA ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>