force-app/main/default/objects/CARE_APP_Staging__c/fields/EMAIL_PREFERRED__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_PREFERRED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMAIL PREFERRED</label>
    <length>1</length>
    <type>Text</type>
</CustomField>