force-app/main/default/objects/CARE_APP_Staging__c/fields/Enrollment_Category__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>