force-app/main/default/objects/CARE_APP_Staging__c/fields/ENROLLMENT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ENROLLMENT_STATUS__c</fullName>
    <label>ENROLLMENT STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>