force-app/main/default/objects/CARE_APP_Staging__c/fields/ERROR_CODE__c.field-meta.xml
<CustomField>
    <fullName>ERROR_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ERROR CODE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>