force-app/main/default/objects/CARE_APP_Staging__c/fields/ERROR_MESSAGE__c.field-meta.xml
<CustomField>
    <fullName>ERROR_MESSAGE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ERROR MESSAGE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>