force-app/main/default/objects/CARE_APP_Staging__c/fields/G_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>G_START_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>G START DATE</label>
    <type>Date</type>
</CustomField>