force-app/main/default/objects/CARE_APP_Staging__c/fields/GUARDIAN_ATTORNEY__c.field-meta.xml
<CustomField>
    <fullName>GUARDIAN_ATTORNEY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GUARDIAN ATTORNEY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>