force-app/main/default/objects/CARE_APP_Staging__c/fields/HEAD_START_INCOME__c.field-meta.xml
<CustomField>
    <fullName>HEAD_START_INCOME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HEAD START INCOME</label>
    <length>1</length>
    <type>Text</type>
</CustomField>