force-app/main/default/objects/CARE_APP_Staging__c/fields/HEALTHY_FAMILIES__c.field-meta.xml
<CustomField>
    <fullName>HEALTHY_FAMILIES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HEALTHY FAMILIES</label>
    <length>1</length>
    <type>Text</type>
</CustomField>