force-app/main/default/objects/CARE_APP_Staging__c/fields/HOME_PHONE__c.field-meta.xml
<CustomField>
    <fullName>HOME_PHONE__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>HOME PHONE</label>
    <length>24</length>
    <type>Text</type>
</CustomField>