force-app/main/default/objects/CARE_APP_Staging__c/fields/HOUSEHOLD_QUALIFY__c.field-meta.xml
<CustomField>
    <fullName>HOUSEHOLD_QUALIFY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HOUSEHOLD QUALIFY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>