force-app/main/default/objects/CARE_APP_Staging__c/fields/IMAGE_ID__c.field-meta.xml
<CustomField>
    <fullName>IMAGE_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IMAGE ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>