force-app/main/default/objects/CARE_APP_Staging__c/fields/INITIAL_EXCEPTION__c.field-meta.xml
<CustomField>
    <fullName>INITIAL_EXCEPTION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INITIAL EXCEPTION</label>
    <type>Checkbox</type>
</CustomField>