force-app/main/default/objects/CARE_APP_Staging__c/fields/INSURANCE_SETTLEMENTS__c.field-meta.xml
<CustomField>
    <fullName>INSURANCE_SETTLEMENTS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>INSURANCE SETTLEMENTS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>