force-app/main/default/objects/CARE_APP_Staging__c/fields/INTEREST_DIVIDENDS__c.field-meta.xml
<CustomField>
    <fullName>INTEREST_DIVIDENDS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>INTEREST DIVIDENDS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>