force-app/main/default/objects/CARE_APP_Staging__c/fields/IS_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>IS_CATEGORY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS CATEGORY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>