force-app/main/default/objects/CARE_APP_Staging__c/fields/IS_DUPLICATE__c.field-meta.xml
<CustomField>
    <fullName>IS_DUPLICATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS DUPLICATE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>