force-app/main/default/objects/CARE_APP_Staging__c/fields/Is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Eligible</label>
    <length>1</length>
    <type>Text</type>
</CustomField>