force-app/main/default/objects/CARE_APP_Staging__c/fields/IS_FIXED_INCOME__c.field-meta.xml
<CustomField>
    <fullName>IS_FIXED_INCOME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS FIXED INCOME</label>
    <length>1</length>
    <type>Text</type>
</CustomField>