force-app/main/default/objects/CARE_APP_Staging__c/fields/IS_FOUR_YEARS__c.field-meta.xml
<CustomField>
    <fullName>IS_FOUR_YEARS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS FOUR YEARS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>