force-app/main/default/objects/CARE_APP_Staging__c/fields/Is_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Mailing_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Mailing Address</label>
    <length>1</length>
    <type>Text</type>
</CustomField>