force-app/main/default/objects/CARE_APP_Staging__c/fields/IS_RECERT__c.field-meta.xml
<CustomField>
    <fullName>IS_RECERT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS RECERT</label>
    <length>1</length>
    <type>Text</type>
</CustomField>