force-app/main/default/objects/CARE_APP_Staging__c/fields/IS_SIGNED__c.field-meta.xml
<CustomField>
    <fullName>IS_SIGNED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IS SIGNED</label>
    <length>1</length>
    <type>Text</type>
</CustomField>