force-app/main/default/objects/CARE_APP_Staging__c/fields/LANGUAGE_PREFERENCE__c.field-meta.xml
<CustomField>
    <fullName>LANGUAGE_PREFERENCE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LANGUAGE PREFERENCE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>