force-app/main/default/objects/CARE_APP_Staging__c/fields/LANGUAGE_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>LANGUAGE_SOURCE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LANGUAGE SOURCE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>