force-app/main/default/objects/CARE_APP_Staging__c/fields/LAST_RUN_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_RUN_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LAST RUN DATE</label>
    <type>Date</type>
</CustomField>