force-app/main/default/objects/CARE_APP_Staging__c/fields/LIHEAP__c.field-meta.xml
<CustomField>
    <fullName>LIHEAP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LIHEAP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>