force-app/main/default/objects/CARE_APP_Staging__c/fields/LINE_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>LINE_TOTAL__c</fullName>
    <label>LINE TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>