force-app/main/default/objects/CARE_APP_Staging__c/fields/Mailing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_City__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Address City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>