force-app/main/default/objects/CARE_APP_Staging__c/fields/Mailing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_State__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Address State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>