force-app/main/default/objects/CARE_APP_Staging__c/fields/Mailing_Address_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_ZipCode__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Address ZipCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>