force-app/main/default/objects/CARE_APP_Staging__c/fields/Mailing_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Address_2__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Street Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>