force-app/main/default/objects/CARE_APP_Staging__c/fields/MDSS_LOAD_DATE__c.field-meta.xml
<CustomField>
    <fullName>MDSS_LOAD_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDSS LOAD DATE</label>
    <type>Date</type>
</CustomField>