force-app/main/default/objects/CARE_APP_Staging__c/fields/MEDICAID_OVER65__c.field-meta.xml
<CustomField>
    <fullName>MEDICAID_OVER65__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MEDICAID OVER65</label>
    <length>1</length>
    <type>Text</type>
</CustomField>