force-app/main/default/objects/CARE_APP_Staging__c/fields/NO_ADULT__c.field-meta.xml
<CustomField>
    <fullName>NO_ADULT__c</fullName>
    <label>NO ADULT</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>