force-app/main/default/objects/CARE_APP_Staging__c/fields/NO_HOUSEHOLD_MEMBER__c.field-meta.xml
<CustomField>
    <fullName>NO_HOUSEHOLD_MEMBER__c</fullName>
    <label>NO HOUSEHOLD MEMBER</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>