force-app/main/default/objects/CARE_APP_Staging__c/fields/NO_RESPONSE_DATE__c.field-meta.xml
<CustomField>
    <fullName>NO_RESPONSE_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NO RESPONSE DATE</label>
    <type>Date</type>
</CustomField>