force-app/main/default/objects/CARE_APP_Staging__c/fields/NSLP__c.field-meta.xml
<CustomField>
    <fullName>NSLP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NSLP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>