force-app/main/default/objects/CARE_APP_Staging__c/fields/PARTICIPATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>PARTICIPATION_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PARTICIPATION DATE</label>
    <type>Date</type>
</CustomField>