force-app/main/default/objects/CARE_APP_Staging__c/fields/PENSIONS__c.field-meta.xml
<CustomField>
    <fullName>PENSIONS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PENSIONS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>