force-app/main/default/objects/CARE_APP_Staging__c/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>PHONE</label>
    <length>24</length>
    <type>Text</type>
</CustomField>