force-app/main/default/objects/CARE_APP_Staging__c/fields/PROBATION_CODE__c.field-meta.xml
<CustomField>
    <fullName>PROBATION_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PROBATION CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>