force-app/main/default/objects/CARE_APP_Staging__c/fields/RENTAL_ROYALTY_INCOME__c.field-meta.xml
<CustomField>
    <fullName>RENTAL_ROYALTY_INCOME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RENTAL ROYALTY INCOME</label>
    <length>1</length>
    <type>Text</type>
</CustomField>