force-app/main/default/objects/CARE_APP_Staging__c/fields/REQUEST_DROP__c.field-meta.xml
<CustomField>
    <fullName>REQUEST_DROP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>REQUEST DROP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>