force-app/main/default/objects/CARE_APP_Staging__c/fields/SA_ID__c.field-meta.xml
<CustomField>
    <fullName>SA_ID__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>SA ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>