force-app/main/default/objects/CARE_APP_Staging__c/fields/SCANDATE__c.field-meta.xml
<CustomField>
    <fullName>SCANDATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCANDATE</label>
    <type>Date</type>
</CustomField>