force-app/main/default/objects/CARE_APP_Staging__c/fields/SCHOLARSHIPS_GRANTS__c.field-meta.xml
<CustomField>
    <fullName>SCHOLARSHIPS_GRANTS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCHOLARSHIPS GRANTS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>