force-app/main/default/objects/CARE_APP_Staging__c/fields/SERVICE_ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ADDRESS1__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE ADDRESS1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>