force-app/main/default/objects/CARE_APP_Staging__c/fields/SERVICE_ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ADDRESS2__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE ADDRESS2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>