force-app/main/default/objects/CARE_APP_Staging__c/fields/SERVICE_CITY__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_CITY__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE CITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>