force-app/main/default/objects/CARE_APP_Staging__c/fields/Service_County__c.field-meta.xml
<CustomField>
    <fullName>Service_County__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Service County</label>
    <length>30</length>
    <type>Text</type>
</CustomField>