force-app/main/default/objects/CARE_APP_Staging__c/fields/SERVICE_POSTAL__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_POSTAL__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE POSTAL</label>
    <length>12</length>
    <type>Text</type>
</CustomField>