force-app/main/default/objects/CARE_APP_Staging__c/fields/SERVICE_STATE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_STATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SERVICE STATE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>