force-app/main/default/objects/CARE_APP_Staging__c/fields/SOCIAL_SECURITY__c.field-meta.xml
<CustomField>
    <fullName>SOCIAL_SECURITY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SOCIAL SECURITY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>